Fix merge error