@@ -39,13 +39,11 @@ import org.whispersystems.signalservice.api.messages.multidevice.SentTranscriptM
 import org.whispersystems.signalservice.api.messages.multidevice.SignalServiceSyncMessage;
 import org.whispersystems.signalservice.api.messages.multidevice.ViewOnceOpenMessage;
 import org.whispersystems.signalservice.api.messages.multidevice.ViewedMessage;
+import org.whispersystems.signalservice.internal.push.SignalServiceProtos.BodyRange;
 
 import com.fasterxml.jackson.annotation.JsonProperty;
 
-import static org.whispersystems.signalservice.internal.push.SignalServiceProtos.BodyRange;
-
 public class MessageEnvelope {
-
 
     public MessageEnvelope(@JsonProperty("sourceAddress") Optional<RecipientAddress> sourceAddress,
             @JsonProperty("sourceDevice") int sourceDevice, @JsonProperty("timestamp") long timestamp,
@@ -240,6 +238,7 @@ public class MessageEnvelope {
 
         static Data from(final SignalServiceDataMessage dataMessage, RecipientResolver recipientResolver,
                 RecipientAddressResolver addressResolver, final AttachmentFileProvider fileProvider) {
+
             return new Data(dataMessage.getTimestamp(), dataMessage.getGroupContext().map(GroupContext::from),
                     dataMessage.getStoryContext()
                             .map((SignalServiceDataMessage.StoryContext storyContext) -> StoryContext.from(storyContext,
@@ -265,11 +264,12 @@ public class MessageEnvelope {
                             .map(a -> a.stream().map(m -> Mention.from(m, recipientResolver, addressResolver))
                                     .collect(Collectors.toList()))
                             .orElse(List.of()),
-                    dataMessage.getPreviews().map(a -> a.stream().map(preview -> Preview.from(preview, fileProvider))
-                            .collect(Collectors.toList())).orElse(List.of()));
+                    dataMessage.getPreviews()
+                            .map(a -> a.stream().map(preview -> Preview.from(preview, fileProvider))
+                                    .collect(Collectors.toList()))
                             .orElse(List.of()),
-                    dataMessage.getBodyRanges()
-                            .map(a -> a.stream().filter(BodyRange::hasStyle).map(TextStyle::from).toList())
+                    dataMessage.getBodyRanges().map(a -> a.stream().filter(BodyRange::hasStyle).map(TextStyle::from)
+                            .collect(Collectors.toList())).orElse(List.of()));
         }
 
         public static class GroupContext {
@@ -433,12 +433,8 @@ public class MessageEnvelope {
                         quote.getAttachments() == null ? List.of()
                                 : quote.getAttachments().stream().map(a -> Attachment.from(a, fileProvider))
                                         .collect(Collectors.toList()),
-                        quote.getBodyRanges() == null
-                                ? List.of()
-                                : quote.getBodyRanges()
-                                        .stream()
-                                        .filter(BodyRange::hasStyle)
-                                        .map(TextStyle::from)
+                        quote.getBodyRanges() == null ? List.of()
+                                : quote.getBodyRanges().stream().filter(BodyRange::hasStyle).map(TextStyle::from)
                                         .collect(Collectors.toList()));
             }
 
@@ -568,10 +564,8 @@ public class MessageEnvelope {
                 if (attachment.isPointer()) {
                     final var a = attachment.asPointer();
                     final var attachmentFile = fileProvider.getFile(a);
-                    return new Attachment(Optional.of(attachmentFile.getName()),
-                            Optional.of(attachmentFile),
-                            a.getFileName(),
-                            a.getContentType(),
+                    return new Attachment(Optional.of(attachmentFile.getName()), Optional.of(attachmentFile),
+                            a.getFileName(), a.getContentType(),
                             a.getUploadTimestamp() == 0 ? Optional.empty() : Optional.of(a.getUploadTimestamp()),
                             a.getSize().map(Integer::longValue), a.getPreview(), Optional.empty(),
                             a.getCaption().map(c -> c.isEmpty() ? null : c),
@@ -1044,33 +1038,6 @@ public class MessageEnvelope {
                 return new Preview(preview.getTitle(), preview.getDescription(), preview.getDate(), preview.getUrl(),
                         preview.getImage().map(as -> Attachment.from(as, fileProvider)));
             }
-        }
-
-        public record TextStyle(Style style, int start, int length) {
-
-            public enum Style {
-                NONE,
-                BOLD,
-                ITALIC,
-                SPOILER,
-                STRIKETHROUGH,
-                MONOSPACE;
-
-                static Style from(BodyRange.Style style) {
-                    return switch (style) {
-                        case NONE -> NONE;
-                        case BOLD -> BOLD;
-                        case ITALIC -> ITALIC;
-                        case SPOILER -> SPOILER;
-                        case STRIKETHROUGH -> STRIKETHROUGH;
-                        case MONOSPACE -> MONOSPACE;
-                    };
-                }
-            }
-
-            static TextStyle from(BodyRange bodyRange) {
-                return new TextStyle(Style.from(bodyRange.getStyle()), bodyRange.getStart(), bodyRange.getLength());
-            }
 
             public String title() {
                 return title;
@@ -1091,6 +1058,64 @@ public class MessageEnvelope {
             public Optional<Attachment> image() {
                 return image;
             }
+        }
+
+        public static class TextStyle {
+
+            Style style;
+            int start;
+            int length;
+
+            public TextStyle(@JsonProperty("style") Style style, @JsonProperty("start") int start,
+                    @JsonProperty("length") int length) {
+                this.style = style;
+                this.start = start;
+                this.length = length;
+            }
+
+            public enum Style {
+                NONE,
+                BOLD,
+                ITALIC,
+                SPOILER,
+                STRIKETHROUGH,
+                MONOSPACE;
+
+                static Style from(BodyRange.Style style) {
+                    switch (style) {
+                        case NONE:
+                            return NONE;
+                        case BOLD:
+                            return BOLD;
+                        case ITALIC:
+                            return ITALIC;
+                        case SPOILER:
+                            return SPOILER;
+                        case STRIKETHROUGH:
+                            return STRIKETHROUGH;
+                        case MONOSPACE:
+                            return MONOSPACE;
+                    }
+                    return null;
+                }
+            }
+
+            static TextStyle from(BodyRange bodyRange) {
+                return new TextStyle(Style.from(bodyRange.getStyle()), bodyRange.getStart(), bodyRange.getLength());
+            }
+
+            public Style getStyle() {
+                return style;
+            }
+
+            public int getStart() {
+                return start;
+            }
+
+            public int getLength() {
+                return length;
+            }
+
         }
 
         public long getTimestamp() {
